css/style.css
/* Typography */
a,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Cabin", sans-serif;
}

body {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    line-height: 1.75;
    padding-bottom: 50px;
}

/* Link functionality */
a:link {
    color: black;
}

a:hover {
    color: black;
    text-decoration: none;
}

img {
    height: auto;
}

/* Navbar */
nav {
    background-color: #f7f7f7;
}

nav a {
    text-decoration: none;
    background-image: linear-gradient(currentColor, currentColor);
    background-position: 0% 100%;
    background-repeat: no-repeat;
    background-size: 0% 2px;
    transition: background-size .3s;
}

nav a:hover, .active {
    background-size: 100% 2px;
}

nav a:active {
    background-image: #f7f7f7;
    color: #f7f7f7;
}

/* Project gallery image sizing/styling */
.gallery-border {
    border-radius: 5px 5px 0px 0px;
    height: auto;
    width: 100%;
}

/* Individual project card element */
.grid {
    border-color: #DFDFDF;
    border-radius: 6px;
    border-style: solid;
    border-width: 0.5px;
    height: auto;
    max-width: auto;
}

.grid-p {
    font-size: 14px;
    color: #6F6F6F;
}

/* Mobile */
@media (max-width: 992px) {
    #about-mobile-img {
        width: 100%;
    }
    #intro {
        padding-bottom: 100px;
        padding-top: 200px;
    }
    .content-spacing, .homepage-spacing {
        width: 90%;
    }
    .web-view {
        display: none;
    }
}

/* Desktop */
@media (min-width: 993px) {
    #about-web-img {
        object-fit: cover;
        height: auto;
        width: 600px;
    }
    #intro {
        padding-top: 140px;
    }
    .content-spacing {
        padding-top: 100px;
        width: 50%;
    }
    .homepage-spacing {
        width: 80%;
    }
    .mobile-view {
        display: none;
    }
}

